--- a/index.html
+++ b/index.html
@@ -1,30 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Fork Me! FCC: Test Suite Template</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
   <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <!--
+    <main>
+      <h1 id="title">freeCodeCamp Survey Form</h1>
+      <p id="description">Thank you for taking the time to help us improve the platform</p>
 
-    Hello Camper!
+      <form id="survey-form">
+        <label id="name-label" for="name">Name</label><br>
+        <input type="text" id="name" placeholder="Enter your name" required><br>
+        <label id="email-label" for="email">Email</label><br>
+        <input type="email" id="email" placeholder="Enter your email" required><br>
+        <label id="number-label" for="number">Age<span>(optional)</span></label><br>
+        <input type="number" id="number" min="18" max="90" placeholder="Age" required><br>
 
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
+        <p id="role-section">Which option best describes your current role?</p>
+        <select id="dropdown">
+          <option>Student</option>
+          <option>Full Time Job</option>
+          <option>Full Time Learner</option>
+          <option>Prefer not to say</option>
+          <option>Other</option>
+        </select> <br>
 
-    - The freeCodeCamp Team
+        <p id="recommendation-section">Would you recommend freeCodeCamp to a friend?</p>
+        <input type="radio" id="choice1" name="recomendation" value="definitely">
+        <label for="choice1">Definitely</label><br>
+        <input type="radio" id="choice2" name="recomendation" value="maybe">
+        <label for="choice2">Maybe</label> <br>
+        <input type="radio" id="choice3" name="recomendation" value="not-sure">
+        <label for="choice3">Not sure</label> <br>
 
-    -->
 
-    <h1>Hello World</h1>
+        <p id="improve-section">What would you like to see improved? <span>(Check all that apply)</span></p>
+        <input type="checkbox" id="front" value="front-end">
+        <label for="front">Front-end</label> <br>
+        <input type="checkbox" id="back" value="back-end">
+        <label for="back">Back-end</label> <br>
+        <input type="checkbox" id="data" value="data-visualitation">
+        <label for="data">Data visualization</label> <br>
+
+        <label for="suggestions-section">Any comments or suggestions? </label> <br>
+        <textarea id="suggestions-section" name="suggestions-section" rows="4" cols="50">
+        
+        </textarea>
+
+        <input type="submit" value="Submit" id="submit">
 
 
-    <script  src="js/index.js"></script>
+
+      </form>
+
+    </main>
+
+
+
   </body>
+
+
+  <script src="js/index.js"></script>
+</body>
+
 </html>
