--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
   <body>
-
     <main>
-      <h1 id="title">freeCodeCamp Survey Form</h1>
-      <p id="description">Thank you for taking the time to help us improve the platform</p>
-
-      <form id="survey-form">
-        <label id="name-label" for="name">Name</label><br>
-        <input type="text" id="name" placeholder="Enter your name" required><br>
-        <label id="email-label" for="email">Email</label><br>
-        <input type="email" id="email" placeholder="Enter your email" required><br>
-        <label id="number-label" for="number">Age<span>(optional)</span></label><br>
-        <input type="number" id="number" min="18" max="90" placeholder="Age" required><br>
-
+      <div class="heading">
+        <h1 id="title">freeCodeCamp Survey Form</h1>
+        <p id="description">Thank you for taking the time to help us improve the platform</p>
+      </div>
+      <div class="form">
+        <form id="survey-form">
+          <label id="name-label" for="name">Name</label>
+          <input type="text" id="name" placeholder="Enter your name" required>
+          <label id="email-label" for="email">Email</label>
+          <input type="email" id="email" placeholder="Enter your email" required>
+        <label id="number-label" for="number">Age<span>(optional)</span></label>
+        <input type="number" id="number" min="18" max="90" placeholder="Age" required>
         <p id="role-section">Which option best describes your current role?</p>
         <select id="dropdown">
           <option>Student</option>
@@ -32,18 +32,19 @@
           <option>Prefer not to say</option>
           <option>Other</option>
         </select> <br>
+        <section class="radio">
+  <p id="recommendation-section">Would you recommend freeCodeCamp to a friend?</p>
+  <input type="radio" id="choice1" name="recomendation" value="definitely">
+  <label for="choice1">Definitely</label>
+  <input type="radio" id="choice2" name="recomendation" value="maybe">
+  <label for="choice2">Maybe</label>
+  <input type="radio" id="choice3" name="recomendation" value="not-sure">
+  <label for="choice3">Not sure</label>
+</section>
+  
 
-        <p id="recommendation-section">Would you recommend freeCodeCamp to a friend?</p>
-        <input type="radio" id="choice1" name="recomendation" value="definitely">
-        <label for="choice1">Definitely</label><br>
-        <input type="radio" id="choice2" name="recomendation" value="maybe">
-        <label for="choice2">Maybe</label> <br>
-        <input type="radio" id="choice3" name="recomendation" value="not-sure">
-        <label for="choice3">Not sure</label> <br>
-
-
-        <p id="improve-section">What would you like to see improved? <span>(Check all that apply)</span></p>
-        <input type="checkbox" id="front" value="front-end">
+<p id="improve-section">What would you like to see improved? <span>(Check all that apply)</span></p>
+<input type="checkbox" id="front" value="front-end">
         <label for="front">Front-end</label> <br>
         <input type="checkbox" id="back" value="back-end">
         <label for="back">Back-end</label> <br>
@@ -54,20 +55,16 @@
         <textarea id="suggestions-section" name="suggestions-section" rows="4" cols="50">
         
         </textarea>
-
         <input type="submit" value="Submit" id="submit">
-
-
-
       </form>
-
+    </div>
     </main>
 
 
-
+    
   </body>
 
-
+  
   <script src="js/index.js"></script>
 </body>
 
