Adegeye final styling

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <section class="radio">
   <p id="recommendation-section">Would you recommend freeCodeCamp to a friend?</p>
   <input type="radio" id="choice1" name="recomendation" value="definitely">
-  <label for="choice1">Definitely</label>
+  <label for="choice1">Definitely</label><br>
   <input type="radio" id="choice2" name="recomendation" value="maybe">
-  <label for="choice2">Maybe</label>
+  <label for="choice2">Maybe</label><br>
   <input type="radio" id="choice3" name="recomendation" value="not-sure">
   <label for="choice3">Not sure</label>
 </section>
@@ -53,7 +53,6 @@
 
         <label for="suggestions-section">Any comments or suggestions? </label> <br>
         <textarea id="suggestions-section" name="suggestions-section" rows="4" cols="50">
-        
         </textarea>
         <input type="submit" value="Submit" id="submit">
       </form>
